k8s/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:11.0.3
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /config
            name: keycloak-data
            subPath: config
          # - mountPath: /etc/localtime
          #   name: localtime
          imagePullPolicy: IfNotPresent
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-pvc
      # - name: localtime
      #   hostPath:
      #     path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: keycloak
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: keycloak.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: keycloak-service
          servicePort: 80
